log
Thu 09 May 2024 09:13:46 PM UTC: 
 tests:  1|8
total_score: 0/70
8430c11
Thu 09 May 2024 09:16:24 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘createTreeMap’:
treemap.c:40:26: error: invalid initializer
   40 |     TreeMap newTreeMap = (TreeMap *)malloc(sizeof(TreeMap));
      |                          ^
treemap.c:40:13: error: unused variable ‘newTreeMap’ [-Werror=unused-variable]
   40 |     TreeMap newTreeMap = (TreeMap *)malloc(sizeof(TreeMap));
      |             ^~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
1f4b3ae
Thu 09 May 2024 09:24:18 PM UTC: 
 treemap.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  1|8
total_score: 0/70
d0ef706
Thu 09 May 2024 09:24:45 PM UTC: 
 treemap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  1|8
total_score: 0/70
80909c2
Thu 09 May 2024 09:25:08 PM UTC: 
 treemap.c | 5 ++---
 1 file changed, 2 insertions(+), 3 deletions(-)
 tests:  4|7
total_score: 5/70
bf6a311
Thu 09 May 2024 09:27:33 PM UTC: 
 treemap.c | 5 +++++
 1 file changed, 5 insertions(+)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:54:14: error: assignment to ‘TreeMap *’ from incompatible pointer type ‘TreeNode *’ [-Werror=incompatible-pointer-types]
   54 |         tree = createTreeNode(key, value);
      |              ^
cc1: all warnings being treated as errors
Compilation failed
5098eca
Thu 09 May 2024 09:27:45 PM UTC: 
 treemap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  4|7
total_score: 5/70
b8ec766
Thu 09 May 2024 09:43:39 PM UTC: 
 treemap.c | 27 +++++++++++++++++++++++++--
 1 file changed, 25 insertions(+), 2 deletions(-)
 tests:  6|6
total_score: 15/70
591bed8
Thu 09 May 2024 09:44:25 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|6
total_score: 15/70
4152824
Thu 09 May 2024 09:44:37 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  8|5
total_score: 15/70
328dd70
